force-app/main/default/objects/cdcpc__RD_GeneralMaterialsList__c/cdcpc__RD_GeneralMaterialsList__c.object-meta.xml
<CustomObject>
    <label>RD GeneralMaterialsList</label>
    <nameField>
        <label>RD GeneralMaterialsList</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RD GeneralMaterialsList</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>