force-app/main/default/objects/cdcpc__RD_GeneralMaterialsList__c/fields/cdcpc__AbvMatlDesc__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__AbvMatlDesc__c</fullName>
    <label>AbvMatlDesc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>