force-app/main/default/objects/cdcpc__RD_GeneralMaterialsList__c/fields/cdcpc__Attach__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Attach__c</fullName>
    <label>Attach</label>
    <length>255</length>
    <type>Text</type>
</CustomField>