force-app/main/default/objects/cdcpc__RD_GeneralMaterialsList__c/fields/cdcpc__OldAbvMatlDesc__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__OldAbvMatlDesc__c</fullName>
    <label>OldAbvMatlDesc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>