force-app/main/default/objects/cdcpc__RD_GeneralMaterialsList__c/fields/cdcpc__OldMatlDesc__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__OldMatlDesc__c</fullName>
    <label>OldMatlDesc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>