force-app/main/default/objects/cdcpc__RD_GeneralMaterialsList__c/fields/cdcpc__UpperTemp__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__UpperTemp__c</fullName>
    <label>UpperTemp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>