force-app/main/default/objects/cdcpc__RD_GeneralMaterialsList__c/listViews/cdcpc__All.listView-meta.xml
<ListView>
    <fullName>cdcpc__All</fullName>
    <columns>NAME</columns>
    <columns>cdcpc__MatlCode__c</columns>
    <columns>cdcpc__Matl__c</columns>
    <columns>cdcpc__SealUpperTemp__c</columns>
    <columns>cdcpc__UpperTemp__c</columns>
    <columns>cdcpc__Density__c</columns>
    <columns>cdcpc__OBSOLETE__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>cdcpc__MatlCode__c</field>
        <operation>equals</operation>
        <value>F86</value>
    </filters>
    <label>All</label>
</ListView>